[package]
name = "namespace"
version.workspace = true
edition.workspace = true

[lib]
name = "namespace"
path = "src/lib.rs"

# Namespace (formerly "profile") domain — per-user, shareable workspaces.
# Each namespace owns filesystem content (`~/.orca/profiles/<id>/`) and
# metadata in orca.db. Free fns called directly by `#[orca_tool]` sites
# (no service trait, per feedback_no_indirection).

[dependencies]
plugin-toolkit = { path = "../plugin-toolkit" }
macro-runtime = { path = "../macro-runtime" }
dispatch = { path = "../dispatch" }
contract = { path = "../contract", default-features = false }
derive    = { path = "../derive" }
schemars      = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
inventory     = { workspace = true }

utils = { path = "../utils" }
db         = { package = "db", path = "../db" }
dirs       = { workspace = true }
anyhow     = { workspace = true }
async-trait = { workspace = true }
tokio      = { workspace = true }
rusqlite   = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
clap       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
