[package]
name = "notifications"
version.workspace = true
edition.workspace = true

[lib]
name = "notifications"
path = "src/lib.rs"

[dependencies]
macro-runtime = { path = "../macro-runtime" }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
# Drives the cdylib JSON-proxy backend (`NotifyProxy`) off the async runtime via
# `spawn_blocking`, mirroring `storage::StorageProxy`. Runtime-only use.
tokio       = { workspace = true }
thiserror   = { workspace = true }
toml        = { workspace = true }
anyhow      = { workspace = true }

# `#[orca_tool]` machinery.
dispatch    = { path = "../dispatch" }
contract    = { path = "../contract", default-features = false }
derive      = { path = "../derive" }
schemars    = { workspace = true }
inventory   = { workspace = true }

clap        = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
