[package]
name = "plugin-abi"
# INDEPENDENT of the workspace version — deliberately NOT `version.workspace`.
#
# `VERSION_STRINGS` (see src/lib.rs) is `package_version_strings!()`, i.e. THIS
# crate's version, and abi_stable bakes it into both the `orca_plugin`
# RootModule version check and the `PluginMod` StableAbi layout tag. For a `0.x`
# version abi_stable treats the MINOR as the compatibility boundary. If this
# rode the workspace version, every orca minor bump (0.1.x → 0.2.x) would
# invalidate every previously-built plugin binary even when the FFI ABI never
# changed — which is exactly what stranded sideloaded plugins across releases.
#
# So this version is pinned and hand-managed, FROZEN across orca releases. Under
# abi_stable's `0.x` rules the minor is the hard compatibility boundary, so keep
# this at 0.1.0 and bump the MINOR only on a genuine, intended FFI-ABI break (a
# field/signature change in PluginMod / ToolDef / BackendDef or any StableAbi
# type here) — which is a deliberate flag-day that rebuilds every plugin. Do NOT
# bump it for orca releases. Plugins built against 0.1.x load into any orca
# daemon on 0.1.x regardless of the daemon's own (workspace) version.
version = "0.1.0"
edition.workspace = true

[lib]
name = "plugin_abi"
path = "src/lib.rs"

# The ABI-stable cdylib plugin boundary, isolated to its own crate so that the
# wire contract (PluginModRef / ToolDef / BackendDef + the compat/version
# header) carries ONLY its three irreducible deps: abi_stable for the FFI
# layout, serde for the JSON blobs that cross as strings, and schemars for the
# tool input/output schema type. A cdylib plugin that needs nothing but the
# seam links these three crates and nothing of orca core.
[dependencies]
abi_stable = { workspace = true }
schemars   = { workspace = true }
serde      = { workspace = true }

[lints]
workspace = true
