[package]
name = "plugin-abi"
# INDEPENDENT of the workspace version — deliberately NOT `version.workspace`.
#
# The capability contract in src/lib.rs is FROZEN across orca releases so a
# plugin built against it stays loadable regardless of the daemon's own
# (workspace) version. Wire compatibility is negotiated at spawn as a
# `plugin-proto` major match, not by this crate's version — but keeping this
# pinned documents that the type contract is a deliberate, hand-managed
# flag-day, not something an orca release bumps.
version = "0.1.0"
edition.workspace = true

[lib]
name = "plugin_abi"
path = "src/lib.rs"

# The plain-serde plugin capability contract (ToolDef / BackendDef / DbOp /
# SecretOp / Http* / …), isolated to its own crate so it carries ONLY its two
# irreducible deps: serde for the JSON payloads and schemars for the tool
# input/output schema type. A plugin that needs nothing but the wire types links
# these two crates and nothing of orca core.
[dependencies]
schemars   = { workspace = true }
serde      = { workspace = true }

[lints]
workspace = true
