[package]
name = "plugin-loader"
version.workspace = true
edition.workspace = true

[lib]
name = "plugin_loader"
path = "src/lib.rs"

# Runtime loader for out-of-process (subprocess) plugins.
#
# Deliberately NOT folded into `dispatch`: dispatch is depended on by `derive`,
# `macro-runtime`, and every plugin via the toolkit, and is `inventory`-only by
# design (link-time tool registration). The loader instead sits ABOVE dispatch —
# it owns a parallel runtime registry of dynamically-loaded plugin tools (spawned
# subprocesses spoken to over `plugin-proto`) and falls back to
# `dispatch::dispatch` for the statically-linked ones. The server depends on
# plugin-loader, not the reverse.
[dependencies]
agents     = { path = "../agents" }
anyhow     = { workspace = true }
contract   = { path = "../contract" }
db         = { path = "../db" }
dispatch   = { path = "../dispatch" }
plugin-proto = { path = "../plugin-proto" }
plugin-toolkit = { path = "../plugin-toolkit" }
schemars   = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
# The daemon's single HTTP/TLS stack. Plugins delegate HTTP through the
# `http.request` capability instead of linking their own reqwest — the capability
# host executes it here on orca's one client. (`utils::http` = the ONE HTTP home.)
utils      = { path = "../utils" }
tracing    = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }

[lints]
workspace = true
