[package]
name = "plugin-toolkit"
version.workspace = true
edition.workspace = true

[lib]
name = "plugin_toolkit"
path = "src/lib.rs"

# ── Feature surface ─────────────────────────────────────────────────────
#
# The toolkit is the single plugin-facing facade, but a plugin should link
# only the slice of orca core its macros + imports actually touch. Heavy
# domain/transport deps (containers→bollard, db→rusqlite, utils→git2+reqwest,
# openapi→progenitor, graphql, dispatch+contract) are now optional features.
#
# `default = ["full"]` keeps every existing plugin (jellyfin/proxmox/…)
# compiling unchanged — they get the whole facade. A storage-only plugin (smb,
# nfs) sets `default-features = false`: it keeps the always-on light core
# (serde/schemars/clap/tokio/derive anchors + the `storage` domain + native
# `path`/`hash`) and drops ~300 crates of transitive bloat. See STEP 0/2 of
# the thin-plugin migration: smb invokes only `#[plugin_struct]` + the storage
# trait, never `#[orca_tool]`/`endpoint_resource!`, so it never references the
# gated `contract`/`dispatch`/`db` macro anchors.
[features]
default = ["full"]
full = ["in-process", "tools", "db", "containers", "notify", "graphql", "openapi", "http", "descriptor"]
# In-process (cdylib) execution profile. Carries the tokio reactor and every
# reactor-bound surface a plugin linked INTO a host process needs: the async
# `time`/`process` utilities, the `lifecycle` exec helpers, and the cdylib
# `export::runtime()` that drives a backend behind the synchronous FFI `invoke`.
#
# A THIN (out-of-process / subprocess) plugin does NOT enable this. It reaches
# time/process/subprocess work as synchronous capability round-trips through the
# host — architecturally identical to how `http`/`db` are capabilities — so it
# links no tokio at all. `serve.rs`'s socket loop drops to `futures_executor::
# block_on` on the thin profile (no reactor). This is why `cargo tree -p
# plugin-toolkit -i tokio` shows tokio ABSENT with `in-process` off.
#
# In `full` (the default), so every existing in-process plugin (jellyfin/
# proxmox/…) keeps time/process/tokio exactly as before — zero behavior change.
# The domain crates (storage/service/deploy-target always-on; contract optional
# via `tools`) each gained a matching `in-process` feature that gates their
# tokio-bound host-side proxy + (for service) the subprocess backup capability.
# Propagate ours into theirs so the profiles stay coherent end to end: with
# `in-process` OFF (thin) none of them link tokio; folded into `full`/default the
# in-daemon behavior is byte-for-byte unchanged. `contract?` — it's only present
# when `tools` pulls it, so the propagation is a no-op on a proxyless profile.
# The tokio reactor is now UNCONDITIONAL: it is the shared, orca-owned surface a
# dynamic (subprocess) plugin registers its async work against, reached only
# through the `process` / `io` / `time` seams — no plugin names tokio or toggles
# a reactor feature. `in-process` therefore no longer carries the runtime; it
# gates ONLY the legacy cdylib export glue (`export`, abi_stable) + the
# daemon-side subcrate proxies, and is on its way out with cdylib itself.
in-process = [
    "storage/in-process",
    "service/in-process",
    "deploy-target/in-process",
    "contract?/in-process",
    "dispatch?/in-process",
]
# Data-driven endpoint executor (`plugin_toolkit::descriptor`): an embedded
# `EndpointDescriptor` table + one shared validating executor replaces a
# compiled tool fn + JsonSchema type per operation. Dependency-free — the
# validator is hand-rolled and transport rides `capsink::http_request` — so a
# descriptor-driven OpenAPI plugin links neither progenitor nor reqwest.
descriptor = []
# `#[orca_tool]` + dispatch register_op! anchors (ToolCtx/JsonAny/registry).
# Also pulls light `utils` (default-features off — no reqwest/git2/tls) so a
# tool plugin reaches the orca-owned `utils::time::Timestamp` via
# `plugin_toolkit::time` without the http stack.
# `futures-executor` rides `tools` so the thin `serve.rs` socket loop (gated
# `tools`+`db`, `in-process` OFF) has a reactor-free `block_on`. Harmless on the
# in-process profile, where `serve` uses tokio instead.
tools = ["dep:contract", "dep:dispatch"]
# `endpoint_resource!` registry layer — the PLUGIN-facing (thin) form. A plugin
# declares tables + typed CRUD; the generated code routes every op through
# `runtime::db_op` → the `db.op` capability (subprocess) or the host FFI channel
# (cdylib). It links NO rusqlite and NOT the `db` crate (which drags
# reqwest/mysql/postgres/moka): the daemon owns the one connection. `macro-runtime`
# supplies the light `SchemaFragment` target the daemon applies. See
# [[plugins-stay-thin]].
db = ["dep:macro-runtime"]
# In-core (daemon-side) `endpoint_resource!` — for tables compiled INTO the
# daemon (e.g. `system::managed_mounts`). There is no capability sink and no host
# FFI channel in-process, so `runtime::db_op` falls back to the `db` crate's
# pooled executor against orca's real connection; `#[derive(Replicated)]` mesh
# sync also needs the rusqlite-backed `ReplicatedRegistration`. Enabled ONLY by
# core crates, NEVER by a plugin.
db-incore = ["db", "dep:db", "dep:rusqlite", "macro-runtime/replication"]
containers = ["dep:containers"]
notify = ["dep:notifications"]
graphql = ["dep:graphql", "dep:graphql_client"]
openapi = ["dep:openapi", "dep:progenitor-client", "dep:regress", "dep:bytes"]
# HTTP transport facade (api_client/http modules + address reachability),
# backed by reqwest + the utils http stack.
http = ["utils/http", "dep:reqwest", "dep:http", "dep:rustls"]
# Socket.IO client transport (plugin_toolkit::socketio) for socket-only services
# like dockge. Agnostic async client; the plugin owns its event vocabulary.
socketio = ["in-process", "dep:rust_socketio", "dep:native-tls"]
# Delegated HTTP: a subprocess plugin performs HTTP through orca's `http.request`
# capability instead of linking reqwest/rustls/hyper. Makes `plugin_toolkit::{
# reqwest, progenitor_client, api_client}` resolve to the cap-backed shims in
# `delegated_http` — so a progenitor-generated OpenAPI client retargets onto
# orca's runtime with NO codegen change. Mutually exclusive with `http`/`openapi`
# (which provide the real crates under the same names). Keeps `regress` (small —
# generated string-pattern validation); sheds reqwest/rustls/hyper + the
# progenitor-client crate — that HTTP/TLS bulk is the size win.
delegated-http = ["dep:regress"]
# Meta-feature: the canonical profile for a full OpenAPI plugin built with
# `plugin_toolkit_build::openapi_plugin`. Bundles the tool surface (`tools`),
# the endpoint registry (`db`), and delegated HTTP so the generated progenitor
# client rides orca's `http.request` capability and links no reqwest/rustls.
# Use `features = ["openapi-plugin"]` with `default-features = false` — one name
# instead of the four-crate incantation that was easy to get wrong.
openapi-plugin = ["tools", "db", "delegated-http"]

[dependencies]
# ── Always-on light core ────────────────────────────────────────────────
# Anchors every plugin needs regardless of profile: the serde/schemars/clap
# derives `#[plugin_struct]` emits, the FFI seam, the storage domain, and the
# pure-Rust helpers. None pulls a transitive heavyweight.
anyhow      = { workspace = true }
async-trait = { workspace = true }
clap        = { workspace = true }
inventory   = { workspace = true }
abi_stable  = { workspace = true }
plugin-abi  = { path = "../plugin-abi" }
plugin-proto = { path = "../plugin-proto" }
schemars    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
# tokio is the in-process reactor — optional, pulled ONLY by `in-process` (and
# `full`). A thin subprocess plugin links no tokio; see the `in-process`
# feature. The reactor-bound modules (`time`/`process`/`lifecycle`/`export`
# runtime) are `#[cfg(feature = "in-process")]`.
# The shared plugin reactor + the reactor-bound seams (`process`/`io`/`time`)
# are always compiled, so tokio is a hard dep. Every dynamic plugin links it;
# a purely-synchronous plugin pays only an idle current-thread runtime.
tokio       = { workspace = true, features = ["rt-multi-thread", "macros", "time", "process", "io-util"] }
tracing     = { workspace = true }
# Reactor-free `block_on` for the thin (`in-process`-off) `serve.rs` socket loop:
# a subprocess plugin drives its serial-dispatch futures on a bare executor with
# no tokio. On the `in-process` profile the loop uses tokio's current-thread
# runtime instead (the cap sink's thread-affinity contract is unchanged — both
# drive to completion on the socket-owning thread).
# The light `utils` core (default-features off → no contract/dispatch/tokio/glob)
# is re-exported to plugins as `plugin_toolkit::{hash,id,url}` — see lib.rs. This
# is why plugins drop their own sha2/uuid/urlencoding deps: the seams are
# single-sourced in utils, not duplicated here.
derive      = { path = "../derive" }
# The generic storage domain (thin: serde/trait/registry only) stays always-on
# so storage adapters need no feature flag. `default-features = false` sheds its
# tokio-bound host-side proxy on the thin profile; toolkit's `in-process` turns
# it back on (see [features]) so the in-daemon build is unchanged.
storage = { path = "../storage", default-features = false }
# The generic service domain (same thin shape + a subprocess backup capability
# that is also `in-process`-gated). Same propagation contract as storage.
service = { path = "../service", default-features = false }
# The generic deploy-target domain (same thin shape). Same propagation contract.
deploy-target = { path = "../deploy-target", default-features = false }
regex       = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# ── Gated heavy core (see [features]) ───────────────────────────────────
rusqlite    = { workspace = true, optional = true }
# graphql_client's derive + the build-time codegen (plugin-toolkit-build) emit
# `::plugin_toolkit::graphql_client::*` paths, so the trait crate is re-exported
# here. Plugins never dep it directly.
graphql_client = { workspace = true, optional = true }
# Internal infra re-exported (trait anchors, macro definitions, db).
contract    = { path = "../contract", default-features = false, optional = true }
db          = { package = "db", path = "../db", optional = true }
# `default-features = false` sheds dispatch's `full`→`in-process`→`contract/
# in-process` chain on the thin profile; toolkit's own `in-process` re-enables it
# via `dispatch?/in-process` so the in-daemon build is unchanged. Without this the
# thin `tools` build would drag tokio back in through dispatch's default.
dispatch    = { path = "../dispatch", default-features = false, optional = true }
macro-runtime = { path = "../macro-runtime", optional = true }
notifications = { path = "../notifications", optional = true }
containers = { path = "../containers", optional = true }
# Runtime primitives — plugins reach these through the toolkit, never directly.
utils       = { path = "../utils", default-features = false }
graphql     = { path = "../graphql", optional = true }
openapi     = { path = "../openapi", optional = true }
reqwest     = { workspace = true, features = ["cookies", "multipart"], optional = true }
# Install a process-default rustls CryptoProvider before building a reqwest
# client — required because reqwest links `rustls-no-provider` and a plugin
# cdylib carries its own rustls statics (see api_client::ensure_crypto_provider).
rustls      = { workspace = true, optional = true }
# Rebuild a `reqwest::Response` after transport-layer body rewriting (envelope
# unwrap). reqwest 0.13 is built on http 1.x, so this unifies to one version.
http        = { version = "1", optional = true }
# Progenitor-generated OpenAPI client runtime — re-exported so the codegen's
# rewritten `::plugin_toolkit::*` paths resolve and plugins drop these deps.
progenitor-client = { version = "0.14", optional = true }
regress     = { version = "0.10", optional = true }
bytes       = { version = "1", optional = true }
# Non-optional: the always-on `stream` seam (a plugin drains a domain client's
# async stream without naming `futures`) needs the `Stream` trait. Tiny — trait
# defs only, no executor.
futures-core = { version = "0.3" }
# Non-optional: backs the always-on `reactor` seam's `join_all` (the orca-owned
# async fan-out plugins reach instead of naming `futures`). Tiny combinator crate
# — no executor of its own; it polls on the already-unconditional tokio reactor.
futures-util = { workspace = true }
# Socket.IO async client transport (see the `socketio` feature).
rust_socketio = { workspace = true, optional = true }
native-tls = { workspace = true, optional = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
rustls   = { workspace = true }

[lints]
workspace = true
