[package]
name = "plugins"
version.workspace = true
edition.workspace = true

[lib]
name = "plugins"
path = "src/lib.rs"

[dependencies]
plugin-toolkit = { path = "../plugin-toolkit" }
macro-runtime = { path = "../macro-runtime" }
dispatch        = { path = "../dispatch" }
contract    = { path = "../contract", default-features = false }
derive       = { path = "../derive" }
schemars         = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
inventory        = { workspace = true }

utils = { path = "../utils" }
files    = { path = "../files" }
db = { package = "db", path = "../db" }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
clap        = { workspace = true }
colored     = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
pod = { path = "../pod" }
uuid = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
hex = { version = "0.4" }
base64 = { version = "0.22" }
jsonschema = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
